--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
+    "target": "ES2020",
+    "module": "CommonJS",
     "moduleResolution": "node",
     "sourceMap": true,
     "noImplicitAny": false,
@@ -11,7 +11,7 @@
     "pretty": true,
     "removeComments": true,
     "declaration": true,
-    "lib": ["es6","esnext"]
+    "lib": ["ES2020"]
   },
   "exclude": [
     "node_modules",
